Alineamiento footer Responsive

--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
       </div>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtlEVbXTCyt11CEYuti_zCpYi3_lV-aXY&callback=initMap"
     async defer></script>
-      <footer class="pie bg-dark darken-3 "> <p class = "lumarc">®Lumarc Cambrils S.L. | <a href="AvisoLegal.html">Aviso Legal</a></p><p class = "redes"><i class="far fa-envelope"></i> <i class="fab fa-instagram"></i>  <i class="fab fa-facebook"></i>  <i class="fab fa-linkedin"></i></p></footer>
+      <footer class="pie bg-dark darken-3 "> <p class = "lumarc">®Lumarc Cambrils S.L. |
+        <a href="AvisoLegal.html">Aviso Legal</a></p><p class = "redes"><a href="mailto:info@lumarc.es"><i class="far fa-envelope"></i></a> <a href="https://www.instagram.com/lumarc.cambrils/"><i class="fab fa-instagram"></i></a>  <a href="https://www.facebook.com/lumarccambrils/"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/company/lumarc-cambrils/"><i class="fab fa-linkedin"></i></a></p></footer>
 
   </body>
 </html>
