Añadido texto, ensanchados logos de redes sociales y añadida foto de Lupe

--- a/index.html
+++ b/index.html
@@ -80,17 +80,19 @@
         <h2 class="subtitle">A su servicio desde 1988</h2>
       </div>
       <div id="content1">
-        <h1 id="titulo" class="ml-5 mr-5">Sobre Nosotros</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Nosotros</h1>
         <div class="photo"></div>
         <div>
-          <p class="arti ml-5 pl-5 mr-5 pr-5">Somos una empresa de reconocido prestigio en nuestro sector.</p>
-          <p class="arti ml-5 pl-5 mr-5 pr-5">Te ofrecemos una amplia gama de productos y servicios a unos precios muy competitivos y de la máxima calidad respaldados por un equipo que se caracteriza por su trato cordial y espíritu de servicio.</p>
-          <p class="arti ml-5 pl-5 mr-5 pr-5">Nos encantará mostrarte todas las posibilidades y opciones a tu disposición, estamos convencidos de que encontrarás lo que estás buscando.</p>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">Somos una empresa que cumple este 2018 sus 30 años de vida.</p>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">Cuidamos todo el desarrollo de vuestro trabajo desde la venta hasta el mantenimiento futuro.</p>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">Le ofrecemos una amplia gama de productos y servicios a unos precios muy competitivos y de la máxima calidad, respaldados por un equipo que se caracteriza por su trato cordial y espíritu de servicio.</p>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">Nos encantará mostrarle todas las posibilidades y opciones a su disposición, estamos convencidos de que encontrará lo que está buscando.</p>
           <p class="arti ml-5 pl-5 mr-5 pr-5">La meta principal de nuestra empresa es, sin duda, poder satisfacer todas las necesidades de nuestros clientes.</p>
+          <p class="arti ml-5 pl-5 mr-5 pr-5">Visítenos, será un placer poder atenderle.</p>
         </div>
       </div>
       <div id="content11" class="align-items-center">
-        <h1 id="titulo" class="ml-5 mr-5">Nuestro Equipo</h1>
+        <h1 id="titulo" class="ml-5 mr-5">Equipo</h1>
         <div class="row ml-5 mr-5">
           <div class="column">
               <img src="images/manolo-1.jpg" style="width:100%">
@@ -115,7 +117,7 @@
         </div>
       </div>
       <div id="content12" class="align-items-center ">
-        <h2 id="titulo" class="ml-5 mr-5">Nuestros Proyectos</h2>
+        <h2 id="titulo" class="ml-5 mr-5">Proyectos</h2>
         <div class="container-fluid">
 
           <div id="instafeed" class="row gallery ml-5 mr-5"></div>
@@ -125,17 +127,24 @@
       <div id="content21" class="align-items-center">
         <h1 id="titulo" class="ml-5 mr-5">Marcos</h1>
         <div class="photo"></div>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">En nuestra pagina se encuentra una selección muy grande de marcos en distintos formatos y materiales. Mire nuestra oferta variada y encuentre el marco que se queda lo mejor con su proyecto. No importa si busca un marco de madera, de aluminio o de plástico, un marco clássico o de estilo barroco, para cada occasión y cada deseo tenemos el marco que hace para Usted. Marcos para fotos, bastidores y paspartú están naturalmente a su disposición. Con el buen marco su imagen se convierte en una obra de arte.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">En nuestro negocio encontrará una gran selección de marcos que realizamos a medida, tanto en madera como en aluminio. Marcos para fotos, bastidores y paspartú están naturalmente a su disposición.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Mire nuestra oferta variada y encuentre el marco que esté más acorde con su proyecto.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">No importa si busca un marco clásico, moderno o de estilo barroco, para cada ocasión y cada deseo tenemos el marco que usted necesita.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Con un buen marco su imagen se convierte en una obra de arte.</p>
       </div>
       <div id="content22">
         <h1 id="titulo" class="ml-5 mr-5">Cristales</h1>
         <div class="photo"></div>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Ponemos a su disposición cualquier tipo de cristal que pueda necesitar, tanto decorativo como de seguridad, control solar, acústico, pirolítico, etc. Sin olvidar los espejos.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Cualquiera que sea de su necesidad se lo fabricamos e instalamos a medida.</p>
       </div>
       <div id="content23">
         <h1 id="titulo" class="ml-5 mr-5">Aluminios</h1>
         <div class="photo"></div>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Puede escoger la opción más acorde para sus puertas, ventanas o celosías que precise.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Encontrará desde la gama media-alta hasta lo más sofisticado y técnico en nuestras diferentes gamas de carpintería metálica o PVC.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Un amplio surtido de colores y acabados que cumplirán sus necesidades tanto técnicas como decorativas en las líneas y colores más vanguardistas del momento.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Y si lo suyo es lo clásico, rústico o cualquier otra tendencia o acabado también lo encontrará.</p>
       </div>
       <!-- Swiper -->
         <div class="swiper-container">
@@ -179,12 +188,17 @@
       <div id="content24">
         <h1 id="titulo" class="ml-5 mr-5">Persianas</h1>
         <div class="photo"></div>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Tanto de PVC como de aluminio, ya sea perfilado o extrusionado, en un gran abanico de acabados.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Con diferentes tipos de caja desde las tipo mini hasta las más reforzadas del mercado, adaptadas cada una en función de peso y robustez.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Las encontrará térmicas y acústicas así como de seguridad como las autoblocantes.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">También disponemos de diferentes tipos de accionamiento tanto manual como motorizado.</p>
       </div>
       <div id="content3">
         <h1 id="titulo" class="ml-5 mr-5">Servicios</h1>
         <div class="photo"></div>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Os ofrecemos tanto para vuestro hogar o negocio, cualquier alternativa en cristales, espejos, puertas y ventanas de PVC, aluminio o cristal, persianas etc., así como las diferentes opciones de control solar.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Un servicio desde el momento de asesoraros en la mejor solución para vuestra necesidad a la instalación y puesta en marcha.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Y como no, la asistencia Lumarc en el presente y futuro.</p>
       </div>
       <div id="content4">
         <h1 id="titulo" class="ml-5 mr-5">Contacto</h1>
@@ -195,8 +209,8 @@
               <p>Plaça de la Constitució, 8</p>
               <p>43850 Cambrils, Tarragona</p>
               <br>
-              <p class="negrita">e-mail: </p> <p>info@lumarc.es</p><br>
-              <p class="negrita">Teléfono: </p> <p>977 36 59 21</p>
+              <p class="negrita">e-mail: </p> <a href="mailto:info@lumarc.es"><p>info@lumarc.es</p></a><br>
+              <p class="negrita">Teléfono: </p> <p>+34 977 36 59 21</p>
               <br>
               <p class="negrita">Horario:</p>
               <p>Lunes a viernes: <i>9:00-13:00 y 16:00-20:00</i></p>
@@ -206,7 +220,7 @@
               <p>Lunes a sábado: <i>9:00-13:00</i></p>
               <br>
               <p class="negrita">Redes sociales:</p>
-              <p class = "redes"><i class="fab fa-instagram"></i>  <i class="fab fa-facebook"></i>  <i class="fab fa-linkedin"></i></p>
+              <p class = "redes"><a id="inst" href="https://www.instagram.com/lumarc.cambrils/"><i class="fab fa-instagram"></i></a>  <a id="fb" href="https://www.facebook.com/lumarccambrils/"><i class="fab fa-facebook"></i></a>  <a href="https://www.linkedin.com/company/lumarc-cambrils/"><i class="fab fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="column" id="column2">
