Content1 más que definitivo

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div id="content1">
         <h1 id="titulo" class="ml-5 mr-5">Nosotros</h1>
         <div class="photo"></div>
-        <div>
+        <div id = "parrafo">
           <p class="arti ml-5 pl-5 mr-5 pr-5">Somos una empresa que cumple este 2018 sus 30 años de vida.</p>
           <p class="arti ml-5 pl-5 mr-5 pr-5">Cuidamos todo el desarrollo de vuestro trabajo desde la venta hasta el mantenimiento futuro.</p>
           <p class="arti ml-5 pl-5 mr-5 pr-5">Le ofrecemos una amplia gama de productos y servicios a unos precios muy competitivos y de la máxima calidad, respaldados por un equipo que se caracteriza por su trato cordial y espíritu de servicio.</p>
