--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
         <h1 id="titulo" class="ml-5 mr-5">Equipo</h1>
         <div class="row ml-5 mr-5">
           <div class="column">
-              <img src="images/manolo-1.jpg" style="width:100%">
+              <img src="images/manolo-1.jpg">
               <p class="title">Manolo</p>
               <p class="subtitle">Fundador</p>
           </div>
           <div class="column">
-              <img src="images/lupe-1.jpg" style="width:100%">
+              <img src="images/lupe-1.jpg">
               <p class="title">Guadalupe</p>
               <p class="subtitle">Cofundadora</p>
           </div>
           <div class="column">
-              <img src="images/manu-1.jpg" style="width:100%">
+              <img src="images/manu-1.jpg">
               <p class="title">Manuel</p>
               <p class="subtitle">Trabajador</p>
           </div>
           <div class="column">
-              <img src="images/manolito-1.jpg" style="width:100%">
+              <img src="images/manolito-1.jpg">
               <p class="title">Manolo</p>
               <p class="subtitle">Trabajador</p>
           </div>
