--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="photo"></div>
         <p class="arti ml-5 pl-5 mr-5 pr-5">Os ofrecemos tanto para vuestro hogar o negocio, cualquier alternativa en cristales, espejos, puertas y ventanas de PVC, aluminio o cristal, persianas etc., así como las diferentes opciones de control solar.</p>
         <p class="arti ml-5 pl-5 mr-5 pr-5">Un servicio desde el momento de asesoraros en la mejor solución para vuestra necesidad a la instalación y puesta en marcha.</p>
-        <p class="arti ml-5 pl-5 mr-5 pr-5">Y como no, la asistencia Lumarc en el presente y futuro.</p>
+        <p class="arti ml-5 pl-5 mr-5 pr-5">Y cómo no, la asistencia Lumarc en el presente y futuro.</p>
       </div>
       <div id="content4">
         <h1 id="titulo" class="ml-5 mr-5">Contacto</h1>
