--- a/AvisoLegal.html
+++ b/AvisoLegal.html
@@ -1,76 +1,93 @@
 <!DOCTYPE HTML>
 <html lang="es">
   <head>
-    <title>Aviso Legal</title>
+    <title>Lumarc</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/logo-black-icon.png">
+    <!--Icon Image-->         <link rel="icon" href="images/logo-black-icon.png">
+    <!--Bootstrap CSS-->      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--Main CSS-->           <link rel="stylesheet" href="css/styles.css">
+    <!--Montserrat Font-->    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
-    DATOS GENERALES
-    <br>
-    De acuerdo con el artículo 10 de la Ley 34/2002, de 11 de julio, de Servicios de la Sociedad de la Información y de Comercio Electrónico ponemos a su disposición los siguientes datos:
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top bg-faded">
+      <div class="container">
+        <a class="navbar-brand" href="https://lumarc.es/#header"><img src="images/logo-white.png"></img></a>
+        <button class="navbar-toggler custom-toggler" data-toggle="collapse" data-target="#myCollapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="myCollapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link nav-hide" href="https://lumarc.es/#nosotros">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-hide" href="https://lumarc.es/#equipo">Equipo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-hide" href="https://lumarc.es/#proyectos">Proyectos</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle bg-dark" data-toggle="dropdown" data-target="dropdown_target">
+                Productos
+                <span class="caret"></span>
+              </a>
+            <div class="dropdown-menu navbar-dark bg-dark" aria-labelledby="dropdown_target">
+              <a class="dropdown-item nav-hide" href="https://lumarc.es/#marcos">Marcos</a>
+              <a class="dropdown-item nav-hide" href="https://lumarc.es/#cristales">Cristales</a>
+              <a class="dropdown-item nav-hide" href="https://lumarc.es/#aluminios">Aluminios</a>
+              <a class="dropdown-item nav-hide" href="https://lumarc.es/#persianas">Persianas</a>
+            </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-hide" href="https://lumarc.es/#servicios">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-hide" href="https://lumarc.es/#contacto">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      </nav>
+      <section class="avisoLegal">
+        <div class="container">
+          <h1>Aviso Legal</h1>
+          <p>Lumarc S.L. es el responsable del sitio web, en adelante RESPONSABLE, pone a disposición de los usuarios el presente documento, con el que pretende dar cumplimiento a las obligaciones dispuestas en la Ley 34/2002, de 11 de julio, de Servicios de la Sociedad de la Información y de Comercio Electrónico (LSSICE), así como informar a todos los usuarios del sitio web respecto a cuáles son las condiciones de uso.</p>
+          <p>Toda persona que acceda a este sitio web asume el papel de usuario, comprometiéndose a la observancia y cumplimiento riguroso de las disposiciones aquí dispuestas, así como a cualquier otra disposición legal que fuera de aplicación.</p>
+          <p>Lumarc S.L., se reserva el derecho de modificar cualquier tipo de información que pudiera aparecer en el sitio web, sin que exista obligación de preavisar o poner en conocimiento de los usuarios dichas obligaciones, entendiéndose como suficiente con la publicación en el sitio web de Lumarc S.L..</p>
 
-    Lumarc Cambrils S.L. está domiciliada en la Plaça de la Constitució, 8, 43850 Cambrils, Tarragona, con CIF B43602093. Inscrita en el Registro Mercantil de Cambrils, Vol. (número correspondiente), Folio (número correspondiente), Hoja (número correspondiente), Inscripción (número correspondiente).
+          <h5>1. Datos Identificativos</h5>
+          <p>Nombre de dominio: https://lumarc.es/</p>
+          <p>Nombre comercial: Lumarc S.L.</p>
+          <p>Denominación social: [TODO]</p>
+          <p>NIF: [TODO]</p>
+          <p>Domicilio social: Plaça de la Constitució, 8, 43850 Cambrils, Tarragona</p>
+          <p>Teléfono: +34 977 36 59 21</p>
+          <p>e-mail: info@lumarc.es</p>
 
-    En la web https://lumarc.es/ hay una serie de contenidos de carácter informativo sobre dicha empresa.
+          <h5>2. Derechos de propiedad intelectual e industrial</h5>
+          <p>El sitio web, incluyendo a título enunciativo pero no limitativo su programación, edición, compilación y demás elementos necesarios para su funcionamiento, los diseños, logotipos, texto y/o gráficos, son propiedad del RESPONSABLE o, si es el caso, dispone de licencia o autorización expresa por parte de los autores. Todos los contenidos del sitio web se encuentran debidamente protegidos por la normativa de propiedad intelectual e industrial, así como inscritos en los registros públicos correspondientes.</p>
+          <p>Independientemente de la finalidad para la que fueran destinados, la reproducción total o parcial, uso, explotación, distribución y comercialización, requiere en todo caso de la autorización escrita previa por parte del RESPONSABLE. Cualquier uso no autorizado previamente se considera un incumplimiento grave de los derechos de propiedad intelectual o industrial del autor.</p>
+          <p>Los diseños, logotipos, texto y/o gráficos ajenos al RESPONSABLE y que pudieran aparecer en el sitio web, pertenecen a sus respectivos propietarios, siendo ellos mismos responsables de cualquier posible controversia que pudiera suscitarse respecto a los mismos. El RESPONSABLE autoriza expresamente a que terceros puedan redirigir directamente a los contenidos concretos del sitio web, y en todo caso redirigir al sitio web principal de el RESPONSABLE reconoce a favor de sus titulares los correspondientes derechos de propiedad intelectual e industrial, no implicando su sola mención o aparición en el sitio web la existencia de derechos o responsabilidad alguna sobre los mismos, como tampoco respaldo, patrocinio o recomendación por parte del mismo.</p>
+          <p>Para realizar cualquier tipo de observación respecto a posibles incumplimientos de los derechos de propiedad intelectual o industrial, así como sobre cualquiera de los contenidos del sitio web, puede hacerlo a través del correo electrónico info@lumarc.es.</p>
 
-    Su principal objetivo es facilitar a los clientes y al público en general, la información relativa a la empresa, a los productos y servicios que se ofrecen.
-    <br><br><br>
-    POLÍTICA DE PRIVACIDAD
-    <br>
-    Ejemplo aviso legalEn cumplimiento de lo dispuesto en la Ley Orgánica 15/1999, de 13 de Diciembre, de Protección de Datos de Carácter Personal (LOPD) se informa al usuario que todos los datos que nos proporcione serán incorporados a un fichero, creado y mantenido bajo la responsabilidad de Lumarc Cambrils S.L.
+          <h5>3. Exención de responsabilidades</h5>
+          <p>El RESPONSABLE se exime de cualquier tipo de responsabilidad derivada de la información publicada en su sitio web siempre que esta información haya sido manipulada o introducida por un tercero ajeno al mismo.</p>
 
-    Siempre se va a respetar la confidencialidad de sus datos personales que sólo serán utilizados con la finalidad de gestionar los servicios ofrecidos, atender a las solicitudes que nos plantee, realizar tareas administrativas, así como remitir información técnica, comercial o publicitaria por vía ordinaria o electrónica.
+          <h5>Política de enlaces</h5>
+          <p>Desde el sitio web, es posible que se redirija a contenidos de terceros sitios web. Dado que el RESPONSABLE no puede controlar siempre los contenidos introducidos por los terceros en sus respectivos sitios web, no asume ningún tipo de responsabilidad respecto a dichos contenidos.</p>
+          <p>En todo caso, procederá a la retirada inmediata de cualquier contenido que pudiera contravenir la legislación nacional o internacional, la moral o el orden público, procediendo a la retirada inmediata de la redirección a dicho sitio web, poniendo en conocimiento de las autoridades competentes el contenido en cuestión.</p>
+          <p>El RESPONSABLE no se hace responsable de la información y contenidos almacenados, a título enunciativo pero no limitativo, en foros, chats, generadores de blogs, comentarios, redes sociales o cualquier otro medio que permita a terceros publicar contenidos de forma independiente en la página web del RESPONSABLE. Sin embargo, y en cumplimiento de lo dispuesto en los artículos 11 y 16 de la LSSICE, se pone a disposición de todos los usuarios, autoridades y fuerzas de seguridad, colaborando de forma activa en la retirada o, en su caso, bloqueo de todos aquellos contenidos que puedan afectar o contravenir la legislación nacional o internacional, los derechos de terceros o la moral y el orden público. En caso de que el usuario considere que existe en el sitio web algún contenido que pudiera ser susceptible de esta clasificación, se ruega lo notifique de forma inmediata al administrador del sitio web.</p>
+          <p>Este sitio web ha sido revisado y probado para que funcione correctamente. En principio, puede garantizarse el correcto funcionamiento los 365 días del año, 24 horas al día. Sin embargo, el RESPONSABLE no descarta la posibilidad de que existan ciertos errores de programación, o que acontezcan causas de fuerza mayor, catástrofes naturales, huelgas o circunstancias semejantes que hagan imposible el acceso a la página web.</p>
 
-    Para ejercer sus derechos de oposición, rectificación o cancelación deberá dirigirse a la sede de la empresa Plaça de la Constitució, 8, 43850 Cambrils, Tarragona, escribirnos al siguiente correo info@lumarc.es o llámanos al 977 36 59 21.
-    <br><br><br>
-    CONDICIONES DE USO
-    <br>
-    Las condiciones de acceso y uso del presente sitio web se rigen por la legalidad vigente y por el principio de buena fe comprometiéndose el usuario a realizar un buen uso de la web. No se permiten conductas que vayan contra la ley, los derechos o intereses de terceros.
+          <h5>4. Ley aplicable y jurisdicción</h5>
+          <p>Para la resolución de todas las controversias o cuestiones relacionadas con el presente sitio web o de las actividades en él desarrolladas, será de aplicación la legislación española, a la que se someten expresamente las partes, siendo competentes para la resolución de todos los conflictos derivados o relacionados con su uso los Juzgados y Tribunales más cercanos a Cambrils.</p>
+        </div>
+      </section>
 
-    Ser usuario de la web de https://lumarc.es/ implica que reconoce haber leído y aceptado las presentes condiciones y lo que las extienda la normativa legal aplicable en esta materia. Si por el motivo que fuere no está de acuerdo con estas condiciones no continúe usando esta web.
-
-    Cualquier tipo de notificación y/o reclamación solamente será válida por notificación escrita y/o correo certificado.
-    <br><br><br>
-    RESPONSABILIDADES
-    <br>
-    Lumarc Cambrils S.L. no se hace responsable de la información y contenidos almacenados en foros, redes sociales o cualesquier otro medio que permita a terceros publicar contenidos de forma independiente en la página web del prestador.
-
-    Sin embargo, teniendo en cuenta los art. 11 y 16 de la LSSI-CE, Lumarc Cambrils S.L. se compromete a la retirada o en su caso bloqueo de aquellos contenidos que pudieran afectar o contravenir la legislación nacional o internacional, derechos de terceros o la moral y el orden público.
-
-    Tampoco la empresa se responsabilizará de los daños y perjuicios que se produzcan por fallos o malas configuraciones del software instalado en el ordenador del internauta. Se excluye toda responsabilidad por alguna incidencia técnica o fallo que se produzca cuando el usuario se conecte a internet. Igualmente no se garantiza la inexistencia de interrupciones o errores en el acceso al sitio web.
-
-    Así mismo, Lumarc Cambrils S.L. se reserva el derecho a actualizar, modificar o eliminar la información contenida en su página web, así como la configuración o presentación del mismo, en cualquier momento sin asumir alguna responsabilidad por ello.
-
-    Le comunicamos que cualquier precio que pueda ver en nuestra web será solamente orientativo. Si el usuario desea saber con exactitud el precio o si el producto en el momento actual cuenta con alguna oferta de la cual se puede beneficiar ha de acudir a alguna de las tiendas físicas con las que cuenta Lumarc Cambrils S.L.
-    <br><br><br>
-    PROPIEDAD INTELECTUAL E INDUSTRIAL
-    <br>
-    Aviso legalLumarc Cambrils S.L. es titular de todos los derechos sobre el software de la publicación digital así como de los derechos de propiedad industrial e intelectual referidos a los contenidos que se incluyan, a excepción de los derechos sobre productos y servicios de carácter público que no son propiedad de esta empresa.
-
-    Ningún material publicado en esta web podrá ser reproducido, copiado o publicado sin el consentimiento por escrito de Lumarc Cambrils S.L.
-
-    Toda la información que se reciba en la web, como comentarios, sugerencias o ideas, se considerará cedida a Lumarc Cambrils S.L. de manera gratuita. No debe enviarse información que NO pueda ser tratada de este modo.
-
-    Todos los productos y servicios de estas páginas que NO son propiedad de Lumarc Cambrils S.L. son marcas registradas de sus respectivos propietarios y son reconocidas como tales por nuestra empresa. Solamente aparecen en la web de Lumarc Cambrils S.L. a efectos de promoción y de recopilación de información. Estos propietarios pueden solicitar la modificación o eliminación de la información que les pertenece.
-    <br><br><br>
-    LEY APLICABLE Y JURISDICCIÓN
-    <br>
-    Las presentes condiciones generales se rigen por la legislación española. Para cualquier litigio que pudiera surgir relacionado con el sitio web o la actividad que en él se desarrolla serán competentes Juzgados de Tarragona, renunciando expresamente el usuario a cualquier otro fuero que pudiera corresponderle.
-    <br><br><br>
-    POLÍTICA DE COOKIES
-    <br>
-    Lumarc Cambrils S.L. por su propia cuenta o la de un tercero contratado para prestación de servicios de medición, pueden utilizar cookies cuando el usuario navega por el sitio web. Las cookies son ficheros enviados al navegador por medio de un servicio web con la finalidad de registrar las actividades del usuario durante su tiempo de navegación.
-
-    Las cookies utilizadas se asocian únicamente con un usuario anónimo y su ordenador, y no proporcionan por sí mismas los datos personales del usuario.
-
-    Mediante el uso de las cookies resulta posible que el servidor donde se encuentra la web reconozca el navegador web utilizado por el usuario con la finalidad de que la navegación sea más sencilla. Se utilizan también para medir la audiencia y parámetros del tráfico, controlar el proceso y número de entradas.
-
-    El usuario tiene la posibilidad de configurar su navegador para ser avisado de la recepción de cookies y para impedir su instalación en su equipo. Por favor consulte las instrucciones y manuales de su navegador para ampliar esta información.
-
-    Para utilizar el sitio web no es necesario que el usuario permita la instalación de las cookies enviadas al sitio web, o el tercero que actúe en su nombre, sin perjuicio de que sea necesario que el usuario inicie una sesión tal en cada uno de los servicios cuya prestación requiera el previo registro.
-
-    En todo caso las cookies tienen un carácter temporal con la única finalidad de hacer más eficaz su transmisión ulterior. En ningún caso se utilizará cookies para recoger información de carácter personal.
+      <!--jQuery-->             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <!--Popper JS-->          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <!--Bootstrap JS-->       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <!--Main JS-->            <script src="js/main.js"></script>
   </body>
 </html>
