--- a/index.html
+++ b/index.html
@@ -182,11 +182,12 @@
               </div>
               <div class="col-lg">
                 <h5>Horario:</h5>
-                <p>Lunes a viernes: <i>9:00-13:00 y 16:00-20:00</i></p>
-                <p>Sábado: <i>9:00-13:00</i></p>
+                <p>Lunes a viernes: <i>8:30-14:00</i></p>
+                <p>Sábado: <i>10:00-13:00</i></p>
                 <br>
                 <h5>Horario de agosto:</h5>
-                <p>Lunes a sábado: <i>9:00-13:00</i></p>
+                <p>Lunes a viernes: <i>8:40-14:30</i></p>
+                <p>Sábado: <i>10:00-13:00</i></p>
                 <br>
                 <h5>Redes sociales:</h5>
                 <p><a href="https://www.instagram.com/lumarc.cambrils/"><i class="fab fa-instagram"></i></a>  <a id="fb" href="https://www.facebook.com/lumarccambrils/"><i class="fab fa-facebook"></i></a>  <a href="https://www.linkedin.com/company/lumarc-cambrils/"><i class="fab fa-linkedin"></i></a></p>
