--- a/index.html
+++ b/index.html
@@ -182,11 +182,7 @@
               </div>
               <div class="col-lg">
                 <h5>Horario:</h5>
-                <p>Lunes a viernes: <i>8:30-14:30</i></p>
-                <p>Sábado: <i>10:00-13:00</i></p>
-                <br>
-                <h5>Horario de agosto:</h5>
-                <p>Lunes a viernes: <i>8:30-14:30</i></p>
+                <p>Lunes a viernes: <i>10:00-13:00 y 17:30-20:00</i></p>
                 <p>Sábado: <i>10:00-13:00</i></p>
                 <br>
                 <h5>Redes sociales:</h5>
