Fixed new Instagram API

--- a/AvisoLegal.html
+++ b/AvisoLegal.html
@@ -59,8 +59,8 @@
           <h5>1. Datos Identificativos</h5>
           <p>Nombre de dominio: https://lumarc.es/</p>
           <p>Nombre comercial: Lumarc S.L.</p>
-          <p>Denominación social: [TODO]</p>
-          <p>NIF: [TODO]</p>
+          <p>Denominación social: Lumarc S.L.</p>
+          <p>NIF: B43602093</p>
           <p>Domicilio social: Plaça de la Constitució, 8, 43850 Cambrils, Tarragona</p>
           <p>Teléfono: +34 977 36 59 21</p>
           <p>e-mail: info@lumarc.es</p>
