--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
       <section id="proyectos">
         <div class="container">
           <h1 data-aos="fade-right" data-aos-duration="2000">Proyectos</h1>
-          <div id="instafeed" class="row gallery"></div>
+          <!-- SnapWidget -->
+          <script src="https://snapwidget.com/js/snapwidget.js"></script>
+          <iframe src="https://snapwidget.com/embed/873040" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+          <!--<div id="instafeed" class="row gallery"></div>-->
         </div>
       </section>
       <section id="marcos">
