--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               </div>
               <div class="col-lg">
                 <h5>Horario:</h5>
-                <p>Lunes a viernes: <i>10:00-13:00 y 17:30-20:00</i></p>
+                <p>Lunes a viernes: <i>9:30-13:30</i></p>
                 <p>Sábado: <i>10:00-13:00</i></p>
                 <br>
                 <h5>Redes sociales:</h5>
