Fixed Google Maps API deprecation

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <!--Swiper JS-->          <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js" integrity="sha256-uckMYBvIGtce2L5Vf/mwld5arpR5JuhAEeJyjPZSUKY=" crossorigin="anonymous"></script>
     <!--AOS JS-->             <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!--Main JS-->            <script src="js/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtlEVbXTCyt11CEYuti_zCpYi3_lV-aXY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtlEVbXTCyt11CEYuti_zCpYi3_lV-aXY&callback=initMap&loading=async" async defer></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?thirdparty=1&always=1&showNoConsent=1&remember=Autodetect&privacyPage=Default%20black"></script>
   </body>
 </html>
