Changed address and schedule

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="row">
               <div class="col-lg">
                 <h5>Dirección:</h5>
-                <p>Plaça de la Constitució, 8</p>
+                <p>Carrer del País Basc, 3</p>
                 <p>43850 Cambrils, Tarragona</p>
                 <br>
                 <h5>e-mail: </h5> <a href="mailto:info@lumarc.es"><p>info@lumarc.es</p></a><br>
@@ -185,7 +185,7 @@
               </div>
               <div class="col-lg">
                 <h5>Horario:</h5>
-                <p>Lunes a viernes: <i>9:30-13:30</i></p>
+                <p>Lunes a viernes: <i>9:30-14:00</i></p>
                 <p>Sábado: <i>10:00-13:00</i></p>
                 <br>
                 <h5>Redes sociales:</h5>
